2007-08-10  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 4) store limits, use them when sending to remote service. 5) Force service limits to incoming packets.

2007-08-09  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 3) receive remote limits.

2007-08-07  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Fixed indentation. No differentiation 
	between user and server limits. In disco#info responses, report 
	only limits of interest.

2007-08-06  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 2) report custom limits.

2007-08-05  Badlop  <badlop@ono.com>

	* src/mod_multicast.erl: Implement XEP33 limits: 1) read options.

2007-08-04  Badlop  <badlop@ono.com>

	* ChangeLog: New file to track changes.
	* README.txt: Removed Changelog section.

	* src/ejabberd_c2s.erl,
	  src/ejabberd_router.erl,
	  src/mod_muc_room.erl,
	  src/mod_multicast.erl: Update 
	  indentation using Emacs' erlang-mode.