@@ -1320,9 +1320,9 @@ presence_update(From, Packet, StateData) ->
 	"unavailable" ->
 	    Status = case xml:get_subtag(Packet, "status") of
 			 false ->
-			     "";
+			    "";
 			 StatusTag ->
-			     xml:get_tag_cdata(StatusTag)
+			    xml:get_tag_cdata(StatusTag)
 		     end,
 	    ejabberd_sm:unset_presence(StateData#state.sid,
 				       StateData#state.user,
@@ -1481,67 +1481,87 @@ presence_track(From, To, Packet, StateData) ->
 			    pres_a = A}
     end.
 
-%% Send presence when disconnecting
 presence_broadcast(StateData, From, JIDSet, Packet) ->
-    JIDs = ?SETS:to_list(JIDSet),
-    JIDs2 = format_and_check_privacy(From, StateData, Packet, JIDs),
-    send_multiple(From, JIDs2, Packet).
+    lists:foreach(fun(JID) ->
+			  FJID = jlib:make_jid(JID),
+			  case ejabberd_hooks:run_fold(
+				 privacy_check_packet, StateData#state.server,
+				 allow,
+				 [StateData#state.user,
+				  StateData#state.server,
+				  StateData#state.privacy_list,
+				  {From, FJID, Packet},
+				  out]) of
+			      deny ->
+				  ok;
+			      allow ->
+				  ejabberd_router:route(From, FJID, Packet)
+			  end
+		  end, ?SETS:to_list(JIDSet)).
 
-%% Send presence when updating presence
-presence_broadcast_to_trusted(StateData, From, Trusted, JIDSet, Packet) ->
-    JIDs = ?SETS:to_list(JIDSet),
-    JIDs_trusted = [JID || JID <- JIDs, ?SETS:is_element(JID, Trusted)],
-    JIDs2 = format_and_check_privacy(From, StateData, Packet, JIDs_trusted),
-    send_multiple(From, JIDs2, Packet).
+presence_broadcast_to_trusted(StateData, From, T, A, Packet) ->
+    lists:foreach(
+      fun(JID) ->
+	      case ?SETS:is_element(JID, T) of
+		  true ->
+		      FJID = jlib:make_jid(JID),
+		      case ejabberd_hooks:run_fold(
+			     privacy_check_packet, StateData#state.server,
+			     allow,
+			     [StateData#state.user,
+			      StateData#state.server,
+			      StateData#state.privacy_list,
+			      {From, FJID, Packet},
+			      out]) of
+			  deny ->
+			      ok;
+			  allow ->
+			      ejabberd_router:route(From, FJID, Packet)
+		      end;
+		  _ ->
+		      ok
+	      end
+      end, ?SETS:to_list(A)).
 
-%% Send presence when connecting
+
 presence_broadcast_first(From, StateData, Packet) ->
-    JIDsProbe = 
-	?SETS:fold(
-	   fun(JID, L) -> [JID | L] end,
-	   [],
-	   StateData#state.pres_t),
-    PacketProbe = {xmlelement, "presence", [{"type", "probe"}], []},
-    JIDs2Probe = format_and_check_privacy(From, StateData, Packet, JIDsProbe),
-    send_multiple(From, JIDs2Probe, PacketProbe),
-    
+    ?SETS:fold(fun(JID, X) ->
+		       ejabberd_router:route(
+			 From,
+			 jlib:make_jid(JID),
+			 {xmlelement, "presence",
+			  [{"type", "probe"}],
+			  []}),
+		       X
+	       end,
+	       [],
+	       StateData#state.pres_t),
     if
 	StateData#state.pres_invis ->
 	    StateData;
 	true ->
-	    {As, JIDs} = 
-		?SETS:fold(
-		   fun(JID, {A, JID_list}) ->
-			   {?SETS:add_element(JID, A), JID_list++[JID]}
-		   end,
-		   {StateData#state.pres_a, []},
-		   StateData#state.pres_f),
-	    JIDs2 = format_and_check_privacy(From, StateData, Packet, JIDs),
-	    send_multiple(From, JIDs2, Packet),
+	    As = ?SETS:fold(
+		    fun(JID, A) ->
+			    FJID = jlib:make_jid(JID),
+			    case ejabberd_hooks:run_fold(
+				   privacy_check_packet, StateData#state.server,
+				   allow,
+				   [StateData#state.user,
+				    StateData#state.server,
+				    StateData#state.privacy_list,
+				    {From, FJID, Packet},
+				    out]) of
+				deny ->
+				    ok;
+				allow ->
+				    ejabberd_router:route(From, FJID, Packet)
+			    end,
+			    ?SETS:add_element(JID, A)
+		    end,
+		    StateData#state.pres_a,
+		    StateData#state.pres_f),
 	    StateData#state{pres_a = As}
     end.
-
-format_and_check_privacy(From, StateData, Packet, JIDs) ->
-    FJIDs = [jlib:make_jid(JID) || JID <- JIDs],
-    lists:filter(
-      fun(FJID) ->
-	      case ejabberd_hooks:run_fold(
-		     privacy_check_packet, StateData#state.server,
-		     allow,
-		     [StateData#state.user,
-		      StateData#state.server,
-		      StateData#state.privacy_list,
-		      {From, FJID, Packet},
-		      out]) of
-		  deny -> false;
-		  allow -> true
-	      end
-      end,
-      FJIDs).
-
-send_multiple(From, JIDs, Packet) ->
-    Server_host = From#jid.lserver,
-    ejabberd_router:route_multiple(Server_host, From, JIDs, Packet).
 
 
 remove_element(E, Set) ->
