@@ -1,5 +1,8 @@
 2007-08-10  Badlop  <badlop@ono.com>
 
+	* src/mod_muc_room.erl, src/ejabberd_router.erl, 
+	src/ejabberd_c2s.erl: Updated to ejabberd trunk without patches.
+
 	* src/mod_multicast.erl: Implement XEP33 limits: 4) store limits, use them when sending to remote service. 5) Force service limits to incoming packets.
 
 2007-08-09  Badlop  <badlop@ono.com>
